--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: php
 
 php:
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
-  - 7.1
-  - 7.2
+  - "5.4"
+  - "5.5"
+  - "5.6"
+  - "7.0"
+  - "7.1"
+  - "7.2"
 
 env:
   global:
@@ -15,15 +15,15 @@ env:
 matrix:
   fast_finish: true
   include:
-    - php: 5.3
+    - php: "5.3"
       dist: precise
-    - php: 7.1
+    - php: "7.1"
       env: COMPOSER_FLAGS="--prefer-lowest" SYMFONY_DEPRECATION_HELPER=weak
-    - php: 5.6
+    - php: "5.6"
       env: DEPENDENCIES="symfony/lts:^2"
-    - php: 7.1
+    - php: "7.1"
       env: DEPENDENCIES="symfony/lts:^3"
-    - php: 7.2
+    - php: "7.2"
       env: STABILITY=dev
 
 sudo: false
