--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,16 @@ matrix:
   fast_finish: true
   include:
     - php: "5.3"
-      dist: precise
+      dist: trusty
+    - php: "5.4"
+      dist: trusty
+    - php: "5.5"
+      dist: trusty
     - php: "7.1"
       env: COMPOSER_FLAGS="--prefer-lowest" SYMFONY_DEPRECATION_HELPER=weak
     - php: "5.6"
       env: DEPENDENCIES="symfony/lts:^2"
+      dist: trusty
     - php: "7.1"
       env: DEPENDENCIES="symfony/lts:^3"
     - php: "7.2"
