--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
   fast_finish: true
   include:
     - php: "5.3"
-      dist: trusty
+      dist: precise
     - php: "5.4"
       dist: trusty
     - php: "5.5"
