--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "antishov/doctrine-extensions-bundle",
     "type": "symfony-bundle",
     "description": "Forked from stof/doctrine-extensions-bundle integration of the gedmo/doctrine-extensions with Symfony2",
-    "keywords": ["tree", "behaviors", "doctrine2", "extensions", "gedmo", "sluggable","loggable", "translatable", "nestedset", "sortable", "timestampable", "stoof"],
+    "keywords": ["tree", "behaviors", "doctrine2", "extensions", "gedmo", "sluggable","loggable", "translatable", "nestedset", "sortable", "timestampable", "stof"],
     "homepage": "https://github.com/antishov/StofDoctrineExtensionsBundle",
     "license": "MIT",
     "authors": [
@@ -15,6 +15,9 @@
             "email": "stof@notk.org"
         }
     ],
+    "conflict": {
+        "stof/doctrine-extensions-bundle": "*"
+    },
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": "~2.7|~3.2|~4.0",
