--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
         "stof/doctrine-extensions-bundle": "*"
     },
     "require": {
-        "php": ">=5.3.2",
-        "symfony/framework-bundle": "~2.7|~3.2|~4.0",
+        "php": ">=7.1",
+        "symfony/framework-bundle": "^4.3",
         "gedmo/doctrine-extensions": "^2.3.4"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^4.0",
-        "symfony/security-bundle": "^2.7 || ^3.2 || ^4.0"
+        "symfony/phpunit-bridge": "^4.3",
+        "symfony/security-bundle": "^4.3"
     },
     "suggest": {
         "doctrine/doctrine-bundle": "to use the ORM extensions",
@@ -36,7 +36,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.3.x-dev"
+            "dev-master": "2.0-dev"
         }
     }
 }
