--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
 version: "3.3"
 services:
-  php:
+  php7.1:
     build:
       context: .
-      dockerfile: Dockerfile
-    volumes:
-      - .:/var/php
+      dockerfile: ./.docker/php:7.1/Dockerfile
+  php7.2:
+    build:
+      context: .
+      dockerfile: ./.docker/php:7.2/Dockerfile
