--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,12 @@
     },
     "require": {
         "php": ">=7.1",
-        "symfony/framework-bundle": "^4.3",
+        "symfony/framework-bundle": "^4.3|^5.0",
         "gedmo/doctrine-extensions": "^2.3.4"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^4.3",
-        "symfony/security-bundle": "^4.3"
+        "symfony/phpunit-bridge": "^4.3|^5.0",
+        "symfony/security-bundle": "^4.3|^5.0"
     },
     "suggest": {
         "doctrine/doctrine-bundle": "to use the ORM extensions",
