--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,24 @@ env:
 matrix:
   fast_finish: true
   include:
+    # Minimum supported dependencies with the latest and oldest PHP version
+    - php: "7.1"
+      env: SYMFONY_VERSION="^4.3" COMPOSER_FLAGS="--prefer-lowest"
+    - php: "7.4"
+      env: SYMFONY_VERSION="^4.3" COMPOSER_FLAGS="--prefer-lowest"
+
+    # Test the latest stable release
     - php: "7.1"
     - php: "7.2"
+    - php: "7.3"
+    - php: "7.4"
+      env: COVERAGE=true PHPUNIT_FLAGS="--coverage-text"
 
 sudo: false
+
+allow_failures:
+    # Dev-master is allowed to fail.
+    - env: STABILITY="dev"
 
 cache:
   directories:
@@ -18,6 +32,7 @@ cache:
     - $HOME/.phpunit-bridge
 
 before_install:
+  - if [[ -v $SYMFONY_VERSION ]]; then composer config extra.symfony.require $SYMFONY_VERSION; fi;
   - if [[ -v $STABILITY ]]; then composer config minimum-stability $STABILITY; fi;
   - echo "memory_limit=3G" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
 
@@ -27,4 +42,4 @@ install:
 
 script:
   - composer validate --strict --no-check-lock
-  - vendor/bin/simple-phpunit -v
+  - vendor/bin/simple-phpunit -v $PHPUNIT_FLAGS
