--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,16 @@
 version: "3.3"
 services:
-  php7.1:
+  phpunit7.1:
+    entrypoint: ./vendor/bin/simple-phpunit -v
     build:
       context: .
-      dockerfile: ./.docker/php7.1/Dockerfile
-  php7.2:
+      dockerfile: Dockerfile
+      args:
+        php_version: 7.1
+  phpunit7.2:
+    entrypoint: ./vendor/bin/simple-phpunit -v
     build:
       context: .
-      dockerfile: ./.docker/php7.2/Dockerfile
+      dockerfile: Dockerfile
+      args:
+        php_version: 7.2
