--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
   composer:
-    entrypoint: composer update --prefer-lowest --no-interaction
+    command: composer update --prefer-lowest --no-interaction
     volumes:
     - .:/var/php
     build:
