Moved tests to the separate docker-compose file

--- a/docker-compose.tests.yml
+++ b/docker-compose.tests.yml
@@ -1,14 +1,14 @@
 version: "3.3"
 services:
   phpunit7.3:
-    entrypoint: ./vendor/bin/simple-phpunit -v
+    command: ./vendor/bin/simple-phpunit -v
     build:
       context: .
       dockerfile: Dockerfile
       args:
         php_version: 7.3
   phpunit7.4:
-    entrypoint: ./vendor/bin/simple-phpunit -v
+    command: ./vendor/bin/simple-phpunit -v
     build:
       context: .
       dockerfile: Dockerfile
