Replace instead of conflict with stof/doctrine-extensions-bundle

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
             "email": "stof@notk.org"
         }
     ],
-    "conflict": {
+    "replace": {
         "stof/doctrine-extensions-bundle": "*"
     },
     "require": {
