--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "stof/doctrine-extensions-bundle": "self.version"
     },
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.2.5 || ^8.0",
         "symfony/framework-bundle": "^4.4|^5.0",
         "gedmo/doctrine-extensions": "^2.3.4 || ^3.0"
     },
