--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
     - php: "7.2.5"
     - php: "7.3"
     - php: "7.4"
-      env: COVERAGE=true PHPUNIT_FLAGS="--coverage-text"
+      env: XDEBUG_MODE=coverage COVERAGE=true PHPUNIT_FLAGS="--coverage-text"
 
 sudo: false
 
