Added php8 support

--- a/docker-compose.tests.yml
+++ b/docker-compose.tests.yml
@@ -21,3 +21,10 @@ services:
       dockerfile: Dockerfile
       args:
         php_version: 7.4
+  phpunit8:
+    command: ./vendor/bin/simple-phpunit -v
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        php_version: 8
