Update composer file in order to be able to upgrade skeleton-source and mdm-service to symfony 6.2

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "antishov/doctrine-extensions-bundle",
+    "name": "ubitransport/doctrine-extensions-bundle",
     "type": "symfony-bundle",
     "description": "Forked from stof/doctrine-extensions-bundle integration of the gedmo/doctrine-extensions with Symfony 4",
     "keywords": ["tree", "behaviors", "doctrine2", "extensions", "gedmo", "sluggable","loggable", "translatable", "nestedset", "sortable", "timestampable", "stof"],
@@ -19,14 +19,14 @@
         "stof/doctrine-extensions-bundle": "self.version"
     },
     "require": {
-        "symfony/mime": "^4.3|^5.0",
-        "php": "^7.2.5 || ^8.0",
-        "symfony/framework-bundle": "^4.4|^5.0",
+        "symfony/mime": "^4.3|^5.0|^6.0",
+        "php": "^7.2.5 || ^8.0 || ^8.1",
+        "symfony/framework-bundle": "^4.4|^5.0|^6.0",
         "gedmo/doctrine-extensions": "^2.3.4 || ^3.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^4.4|^5.0",
-        "symfony/security-bundle": "^4.4|^5.0"
+        "symfony/phpunit-bridge": "^4.4|^5.0|^6.0",
+        "symfony/security-bundle": "^4.4|^5.0|^6.0"
     },
     "suggest": {
         "doctrine/doctrine-bundle": "to use the ORM extensions",
